src/c_discrete_gamma.h

int DiscreteGamma(double freqK[], double rK[], double alpha, double beta, int K,
                  int UseMedian);

double LnGamma(double x);

double QuantileChi2(double prob, double v);

double IncompleteGamma(double x, double alpha, double ln_gamma_alpha);